# docchat-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/adr/: 0000-template.md  0001-use-uv-and-hatch.md  0002-adopt-pre-commit.md  0003-adopt-makefile-task-runner.md  0004-adopt-ruff-and-pyproject-fmt.md  0005-adopt-mypy-pydantic-and-types-requests.md  0006-adopt-pytest.md  0007-adopt-commitizen.md  0008-adopt-docker-containerization.md  0009-adopt-fastapi-uvicorn-and-structlog.md
src/docchat/: __about__.py  __init__.py  config.py
tests/: test_sanity.py
