[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "docchat"
dynamic = ["version"]
description = "Pre-coding scaffold for the DocChat Starter Kit (src/ layout, uv, ruff, mypy, pytest, CI)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { file = "LICENSE" }
keywords = ["scaffold", "fastapi", "rag", "langchain"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]

# Runtime deps kept minimal at setup stage
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[tool.hatch.version]
path = "src/docchat/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/docchat"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "pre-commit>=3.7.0",
  "pyproject-fmt>=2.0.0",
  "commitizen>=3.25.0",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C90", "N", "A", "S", "T20"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
  "src/docchat/__about__.py",
  "pyproject.toml:tool.commitizen.version",
]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
