[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling>=1.24.2" ]

[project]
name = "docchat"
description = "Pre-coding scaffold for the DocChat Starter Kit (src/ layout, uv, ruff, mypy, pytest, CI)."
readme = "README.md"
keywords = [ "fastapi", "langchain", "rag", "scaffold" ]
license = { file = "LICENSE" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = [ "version" ]
# Runtime deps kept minimal at setup stage
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
]

urls.Homepage = "https://example.com"
urls.Repository = "https://example.com/repo"

[dependency-groups]
dev = [
  "commitizen>=3.25",
  "hatchling",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pyproject-fmt>=2",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "types-requests",
]

[tool.hatch.version]
path = "src/docchat/__about__.py"

[tool.hatch.build.targets.wheel]
packages = [ "src/docchat" ]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [ "build", "data", "dist" ]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "lf"
format.skip-magic-trailing-comma = false
format.docstring-code-format = true
lint.select = [ "A", "B", "C90", "E", "F", "I", "N", "S", "T20", "UP", "W" ]
lint.ignore = [ "E501" ]
lint.per-file-ignores."tests/**/*.py" = [ "S101" ]
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "docchat" ]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [ "tests" ]
pythonpath = [ "src" ]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
  "src/docchat/__about__.py",
  "pyproject.toml:tool.commitizen.version",
]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
